fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2036,6 +2036,7 @@ nav a {
   width: 100%;
   float: left;
   position: relative;
+  padding-bottom: 2.4rem;
 }
 @media (min-width: 56em) {
   .widget {
