--- a/assets/css/order.css
+++ b/assets/css/order.css
@@ -1240,6 +1240,7 @@ ul, ol {
   width: 100%;
   float: left;
   position: relative;
+  padding-bottom: 2.4rem;
 }
 @media (min-width: 56em) {
   .widget {
