--- a/assets/scss/site/_footer.scss
+++ b/assets/scss/site/_footer.scss
@@ -56,11 +56,10 @@
 
 .widget {
 	@include change-text-align(center, med, left);
-
 	@include make-xs-column(7);
 	@include make-md-column((7/5));
-
-	// padding-bottom: $h3;
+	
+	padding-bottom: $h3;
 }
 
 	.widget-title {
